# Optimization-for-robotics

./: README.md
BFGS/src/: bfgs.cpp  test1
L1/: CMakeLists.txt  lesson1.md
L1/src/: line_search_2d.cpp  linear_search_2d_with_Robiins_Monro_Rule.cpp
LBFGS/src/: lbfgs.cpp  test
gradient_descent/src/: line_search.cpp  linear_search_2d.cpp  linear_search_2d_with_amijio.cpp
newton_method/src/: newton_method.cpp  test1  test2
